# Philosopher ?
### Build: ?

### Added
### Changed
### Fixed


# Philosopher ?
### Build: ?

### Added
- Database search parameters are now collected from pep.xml files.
- mzID output is now available.

### Changed
- The mapmods flag is deprecated. The flag will still be available and the mapping will ocurr for all analysis.
- idconvert and mscovnert are temporarily disabled for all platforms.
- Updated Golang to 1.12.5
- The filter command now operates aproximately 4 times faster.

### Fixed
- Small bug fixes and methods for tool performance.


# Philosopher 20190418
### Build: 201904181623

### Added
- Support for Unimod ontologies
- PrevAA and NextAA added to PSM data.

### Changed
- Updated Dockerfile.
- Considerable changes were implemented to the modification tracking and reporting.
- Fixed modifications do not show on the report tables anymore.
- Modified and Unmodified observations dropped from the ion table.

### Fixed
- Updated PTMProphet for Windows, version 5.2.0.
- Fixed a bug related to the target-decoy protein classification when printing decoys.


# Philosopher 20190405
### Build: 201904051526

### Added
- Support for UniProt UniRef databases.

### Changed
- The Decoys tags are automatically acquired from the database command, not necessary anymore for the Filter and PeptideProphet.
- Reverted to 1.11.6 due to deadlock bug.


# Philosopher 20190322
### Build: 201903221254

### Changed
- MSconvert was temporarily disabled after a scary bug that ended up removing the user home folder!
- Delta mass amplitude increased to 1000.

# Philosopher 20190319
### Build: 201903191601

### Added

### Changed
- Prophets updated to 5.2.0.
- Comet updated to 2018014.

### Fixed
- Freequant error when reading files was corrected.


# Philosopher 20190313
### Build: 201903131612

### Changed
- Go version updated to 1.12

### Fixed
- A problem with the label-free quantification was introduced in the last version and fixed.
- Minor bugs and typos

